--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@
 							<h1>CV</h1>
 							<span class="image main"><img src="header_images/header_galaxies_interact.png" alt="" /></span>
 							<p>A copy of my CV is available <a
-								href="CVs/CV_Nov2018.pdf">here</a></p>
+								href="CVs/Gannonjs_CV_Academic_Jun_2021.pdf">here</a></p>
 							</div>
 					</div>
 
